# vidthumb

./: CMakeLists.txt  LICENSE  README.md
cmake/: CompilerSettings.cmake  FindCairo.cmake  FindFFMPEG.cmake  Libraries.cmake
src/: ffmpeg_stream.cc  ffmpeg_stream.hh  frame.cc  frame.hh  main.cc  stream.cc  stream.hh  zip_stream.cc  zip_stream.hh
